--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
+    "emailjs": "^4.0.3",
+    "leaflet": "^1.9.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "6.17.0"
   },
   "devDependencies": {
