--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@heroicons/react": "2.0.18",
     "@material-tailwind/react": "2.1.4",
     "emailjs": "^4.0.3",
+    "emailjs-com": "^3.2.0",
     "leaflet": "^1.9.4",
     "prop-types": "15.8.1",
     "react": "18.2.0",
